@@ -54,7 +54,6 @@
     </developers>
 
     <modules>
-        <module>libnd4j</module>
         <module>nd4j</module>
         <module>datavec</module>
         <module>deeplearning4j</module>
@@ -231,8 +230,8 @@
         <junit.platform.launcher.version>1.8.0-M1</junit.platform.launcher.version>
         <archunit.version>0.14.1</archunit.version>
         <logback.version>1.2.3</logback.version>
-        <jackson.version>2.14.2</jackson.version>
-        <jackson.databind.version>2.14.2</jackson.databind.version>
+        <jackson.version>2.16.0</jackson.version>
+        <jackson.databind.version>2.16.0</jackson.databind.version>
         <shaded.snakeyaml.version>1.33</shaded.snakeyaml.version>
         <geo.jackson.version>2.8.7</geo.jackson.version>
         <lombok.version>1.18.24</lombok.version>
@@ -281,7 +280,7 @@
         <maven-lifecycle-mapping-plugin.version>1.0.0</maven-lifecycle-mapping-plugin.version>
         <maven-lifecycle-mapping.version>${maven-lifecycle-mapping-plugin.version}
         </maven-lifecycle-mapping.version>
-        <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
+        <maven-shade-plugin.version>3.5.1</maven-shade-plugin.version>
         <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
         <maven-dependency-plugin.version>3.0.0</maven-dependency-plugin.version>
         <maven-invoker-plugin.version>2.2</maven-invoker-plugin.version>
@@ -1392,50 +1391,33 @@
                 <os.arch>x86_64</os.arch>
             </properties>
         </profile>
-        <!-- Integration Tests Profile. By default (when this profile is not enabled) unit tests are run only.
-             Note also that some tests may run fewer/quicker cases for unit tests vs. integration tests
-        -->
+
         <profile>
-            <id>integration-tests</id>
+            <id>cuda</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
+            <property>
+               <name>libnd4j.chip</name>
+                <value>cuda</value>
+            </property>
             </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${maven-surefire-plugin.version}</version>
-                        <inherited>true</inherited>
-                        <configuration>
-                            <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
-                            <forkCount>1</forkCount>
-                            <reuseForks>false</reuseForks>
-                            <trimStackTrace>false</trimStackTrace>
-                            <environmentVariables>
-                                <OMP_NUM_THREADS>1</OMP_NUM_THREADS>
-                                <DL4J_INTEGRATION_TESTS>true</DL4J_INTEGRATION_TESTS>
-                            </environmentVariables>
-                            <argLine>--add-exports java.base/jdk.internal.misc=ALL-UNNAMED --add-exports java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED -Xmx${test.heap.size} -Dorg.bytedeco.javacpp.maxphysicalbytes=${test.offheap.size} -Dorg.bytedeco.javacpp.maxbytes=${test.offheap.size}</argLine>
-                            <forkCount>1</forkCount>
-                            <reuseForks>false</reuseForks>
-                            <forkedProcessTimeoutInSeconds>240</forkedProcessTimeoutInSeconds>
-                            <forkedProcessExitTimeoutInSeconds>240</forkedProcessExitTimeoutInSeconds>
-                            <parallelTestsTimeoutInSeconds>240</parallelTestsTimeoutInSeconds>
-                            <parallelTestsTimeoutForcedInSeconds>240</parallelTestsTimeoutForcedInSeconds>
-                            <forkCount>1</forkCount>
-                            <threadCount>1</threadCount>
-                            <perCoreThreadCount>false</perCoreThreadCount>
-                        </configuration>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.apache.maven.surefire</groupId>
-                                <artifactId>surefire-junit-platform</artifactId>
-                                <version>${maven-surefire-plugin.version}</version>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
-                </plugins>
-            </build>
+            <modules>
+                <module>libnd4j</module>
+            </modules>
+        </profile>
+
+        <profile>
+            <id>cpu</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>libnd4j.chip</name>
+                    <value>!cuda</value>
+                </property>
+            </activation>
+            <modules>
+                <module>libnd4j</module>
+            </modules>
         </profile>
     </profiles>
 </project>
